{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 150,
  "lineage": "fce092f1-c911-7a13-99ef-705589eab5bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:468835149366:instance/i-0ff92956dbbf32440",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff92956dbbf32440",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-059ce5e3c2120ed83"
              }
            ],
            "primary_network_interface_id": "eni-059ce5e3c2120ed83",
            "private_dns": "ip-172-31-29-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.203",
            "public_dns": "ec2-13-218-246-3.compute-1.amazonaws.com",
            "public_ip": "13.218.246.3",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00089faa3741f5dcc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "all",
              "http-demo-apache",
              "ssh-demo-apache"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-35d73578",
            "tags": {
              "Name": "ApacheInstance"
            },
            "tags_all": {
              "Name": "ApacheInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07a43757cfd48e53d",
              "sg-0b1985b91d1e8f728",
              "sg-0e6a615703bbcbd4a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "468835149366",
            "id": "i-0ff92956dbbf32440",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all",
            "aws_security_group.apache_http",
            "aws_security_group.ssh_apache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468835149366:security-group/sg-0e6a615703bbcbd4a",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6a615703bbcbd4a",
            "ingress": [],
            "name": "all",
            "name_prefix": "",
            "owner_id": "468835149366",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-1ce88766"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "468835149366",
            "id": "sg-0e6a615703bbcbd4a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468835149366:security-group/sg-0b1985b91d1e8f728",
            "description": "Allow Http trafics",
            "egress": [],
            "id": "sg-0b1985b91d1e8f728",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-demo-apache",
            "name_prefix": "",
            "owner_id": "468835149366",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-1ce88766"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "468835149366",
            "id": "sg-0b1985b91d1e8f728",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468835149366:security-group/sg-07a43757cfd48e53d",
            "description": "Allow SSH trafics",
            "egress": [],
            "id": "sg-07a43757cfd48e53d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-demo-apache",
            "name_prefix": "",
            "owner_id": "468835149366",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-1ce88766"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "468835149366",
            "id": "sg-07a43757cfd48e53d",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468835149366:security-group-rule/sgr-0f2b24428da222fc6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f2b24428da222fc6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e6a615703bbcbd4a",
            "security_group_rule_id": "sgr-0f2b24428da222fc6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "468835149366",
            "id": "sgr-0f2b24428da222fc6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_apache_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468835149366:security-group-rule/sgr-0798aa02ba8976f11",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0798aa02ba8976f11",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b1985b91d1e8f728",
            "security_group_rule_id": "sgr-0798aa02ba8976f11",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "468835149366",
            "id": "sgr-0798aa02ba8976f11",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.apache_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_apache_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468835149366:security-group-rule/sgr-012c64783dc9f6893",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-012c64783dc9f6893",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07a43757cfd48e53d",
            "security_group_rule_id": "sgr-012c64783dc9f6893",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "468835149366",
            "id": "sgr-012c64783dc9f6893",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh_apache"
          ]
        }
      ]
    }
  ]
}